[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/cardengine/ui/dialogs/edit_container_dialog/edit_container_dialog.gd" type="Script" id=1]

[node name="EditContainerDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -750.0
margin_bottom = -193.0
window_title = "Edit Container"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLayout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTabs" type="TabContainer" parent="MainLayout"]
margin_right = 510.0
margin_bottom = 473.0
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="Control" parent="MainLayout/MainTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LayoutLayout" type="VBoxContainer" parent="MainLayout/MainTabs/Layout"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeSwitchLayout" type="HBoxContainer" parent="MainLayout/MainTabs/Layout/LayoutLayout"]
margin_right = 502.0
margin_bottom = 40.0

[node name="GridModeLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeSwitchLayout"]
margin_top = 13.0
margin_right = 209.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Grid mode"
align = 2

[node name="ModeSwitch" type="CheckButton" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeSwitchLayout"]
margin_left = 213.0
margin_right = 289.0
margin_bottom = 40.0

[node name="PathModeLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeSwitchLayout"]
margin_left = 293.0
margin_top = 13.0
margin_right = 502.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Path mode"

[node name="FaceSwitchLayout" type="HBoxContainer" parent="MainLayout/MainTabs/Layout/LayoutLayout"]
margin_top = 44.0
margin_right = 502.0
margin_bottom = 84.0

[node name="FaceDownLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/FaceSwitchLayout"]
margin_top = 13.0
margin_right = 209.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Face down"
align = 2

[node name="FaceSwitch" type="CheckButton" parent="MainLayout/MainTabs/Layout/LayoutLayout/FaceSwitchLayout"]
margin_left = 213.0
margin_right = 289.0
margin_bottom = 40.0

[node name="FaceUpLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/FaceSwitchLayout"]
margin_left = 293.0
margin_top = 13.0
margin_right = 502.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Face up"

[node name="ModeLayout" type="HBoxContainer" parent="MainLayout/MainTabs/Layout/LayoutLayout"]
margin_top = 88.0
margin_right = 502.0
margin_bottom = 437.0
size_flags_vertical = 3

[node name="GridMode" type="Control" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout"]
margin_right = 502.0
margin_bottom = 349.0
size_flags_horizontal = 3

[node name="GridModeLayout" type="GridContainer" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridCardWidthLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_top = 5.0
margin_right = 136.0
margin_bottom = 19.0
text = "Card width"

[node name="GridCardWidth" type="SpinBox" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_left = 140.0
margin_right = 502.0
margin_bottom = 24.0
hint_tooltip = "If fixed width is ON, it defines the width of the cards in pixels."
size_flags_horizontal = 3
max_value = 1000.0
value = 200.0
allow_greater = true

[node name="FixedWidthLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_top = 41.0
margin_right = 136.0
margin_bottom = 55.0
text = "Fixed width"

[node name="FixedWidth" type="CheckButton" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_left = 140.0
margin_top = 28.0
margin_right = 502.0
margin_bottom = 68.0
hint_tooltip = "If OFF the width of the cards will be defined based on the width of the container and the spacing to fill the container."
pressed = true

[node name="GridCardSpacingLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_top = 77.0
margin_right = 136.0
margin_bottom = 91.0
text = "Spacing"

[node name="GridCardSpacingLayout" type="HBoxContainer" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_left = 140.0
margin_top = 72.0
margin_right = 502.0
margin_bottom = 96.0

[node name="GridCardSpacingH" type="SpinBox" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout/GridCardSpacingLayout"]
margin_right = 179.0
margin_bottom = 24.0
hint_tooltip = "Define the horizontal spacing between cards relative to their width. A value of 1 means the spacing is the same as the width."
size_flags_horizontal = 3
max_value = 10.0
step = 0.1
value = 1.0
allow_greater = true

[node name="GridCardSpacingV" type="SpinBox" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout/GridCardSpacingLayout"]
margin_left = 183.0
margin_right = 362.0
margin_bottom = 24.0
hint_tooltip = "Define the vertical spacing between cards relative to their height. A value of 1 means the spacing is the same as the height."
size_flags_horizontal = 3
max_value = 10.0
step = 0.1
value = 1.0
allow_greater = true

[node name="GridAlignHLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_top = 103.0
margin_right = 136.0
margin_bottom = 117.0
text = "Horizontal Alignment"

[node name="GridAlignH" type="OptionButton" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_left = 140.0
margin_top = 100.0
margin_right = 502.0
margin_bottom = 120.0
hint_tooltip = "In case fixed sized cards does not fill up the container width, it determines the placement of the cards horizontally."
text = "Left"
items = [ "Left", null, false, 0, null, "Center", null, false, 1, null, "Right", null, false, 2, null ]
selected = 0

[node name="GridAlignVLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_top = 127.0
margin_right = 136.0
margin_bottom = 141.0
text = "Vertical Alignment"

[node name="GridAlignV" type="OptionButton" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_left = 140.0
margin_top = 124.0
margin_right = 502.0
margin_bottom = 144.0
hint_tooltip = "In case fixed sized cards does not fill up the container height, it determines the placement of the cards vertically."
text = "Top"
items = [ "Top", null, false, 0, null, "Middle", null, false, 1, null, "Bottom", null, false, 2, null ]
selected = 0

[node name="GridColumnsLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_top = 153.0
margin_right = 136.0
margin_bottom = 167.0
text = "Columns"

[node name="GridColumns" type="SpinBox" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_left = 140.0
margin_top = 148.0
margin_right = 502.0
margin_bottom = 172.0
hint_tooltip = "If set to a strictly positive number, it limits the number of colums for the grid."
min_value = -1.0
value = -1.0
allow_greater = true

[node name="GridExpandLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_top = 189.0
margin_right = 136.0
margin_bottom = 203.0
text = "Expand container"

[node name="GridExpand" type="CheckButton" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/GridMode/GridModeLayout"]
margin_left = 140.0
margin_top = 176.0
margin_right = 502.0
margin_bottom = 216.0
hint_tooltip = "If ON in case fixed width cards exceed the size of the container, it expands the container minimum size. Particularly useful when placed in a ScrollContainer."

[node name="PathMode" type="Control" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout"]
visible = false
margin_right = 502.0
margin_bottom = 206.0
size_flags_horizontal = 3

[node name="PathModeLayout" type="GridContainer" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/PathMode"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathCardWidthLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/PathMode/PathModeLayout"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Card width"

[node name="PathCardWidth" type="SpinBox" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/PathMode/PathModeLayout"]
margin_left = 77.0
margin_right = 502.0
margin_bottom = 24.0
hint_tooltip = " It defines the width of the cards in pixels."
size_flags_horizontal = 3
max_value = 1000.0
value = 200.0
allow_greater = true

[node name="PathFixedWidthLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/PathMode/PathModeLayout"]
margin_top = 41.0
margin_right = 73.0
margin_bottom = 55.0
text = "Fixed width"

[node name="PathFixedWidth" type="CheckButton" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/PathMode/PathModeLayout"]
margin_left = 77.0
margin_top = 28.0
margin_right = 502.0
margin_bottom = 68.0

[node name="PathSpacingLbl" type="Label" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/PathMode/PathModeLayout"]
margin_top = 77.0
margin_right = 73.0
margin_bottom = 91.0
text = "Spacing"

[node name="PathSpacing" type="SpinBox" parent="MainLayout/MainTabs/Layout/LayoutLayout/ModeLayout/PathMode/PathModeLayout"]
margin_left = 77.0
margin_top = 72.0
margin_right = 502.0
margin_bottom = 96.0
hint_tooltip = "Define the horizontal spacing between cards relative to their width. A value of 1 means the spacing is the same as the width."
size_flags_horizontal = 3
max_value = 10.0
step = 0.1
value = 1.0
allow_greater = true

[node name="FineTuning" type="Control" parent="MainLayout/MainTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TuningLayout" type="VBoxContainer" parent="MainLayout/MainTabs/FineTuning"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionTitle" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout"]
margin_right = 502.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
text = "Position"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PostionLayout" type="GridContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout"]
margin_top = 24.0
margin_right = 502.0
margin_bottom = 144.0
size_flags_vertical = 3
columns = 2

[node name="EnabledLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_top = 13.0
margin_right = 98.0
margin_bottom = 27.0
text = "Enabled"

[node name="Enabled" type="CheckButton" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_left = 102.0
margin_right = 502.0
margin_bottom = 40.0
hint_tooltip = "If enabled allow to move the card relative to the position defined by the layout."
size_flags_horizontal = 3

[node name="ModeLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_top = 47.0
margin_right = 98.0
margin_bottom = 61.0
text = "Mode"

[node name="Mode" type="OptionButton" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_left = 102.0
margin_top = 44.0
margin_right = 502.0
margin_bottom = 64.0
hint_tooltip = "Linear: the position will be interpolated linearly from min to max.
Symmetric: like linear but flip direction in the middle of the cards.
Random: randomly pick a position in the min/max range. "
text = "Linear"
items = [ "Linear", null, false, 0, null, "Symmetric", null, false, 1, null, "Random", null, false, 2, null ]
selected = 0

[node name="RangeMinLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_top = 73.0
margin_right = 98.0
margin_bottom = 87.0
text = "Minimum (x, y)"

[node name="RangeMinLayout" type="HBoxContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_left = 102.0
margin_top = 68.0
margin_right = 502.0
margin_bottom = 92.0

[node name="RangeH" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout/RangeMinLayout"]
margin_right = 198.0
margin_bottom = 24.0
hint_tooltip = "Minimal horizontal relative position."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="RangeV" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout/RangeMinLayout"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 24.0
hint_tooltip = "Minimal vertical relative position."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="RangeMaxLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_top = 101.0
margin_right = 98.0
margin_bottom = 115.0
text = "Maximum (x, y)"

[node name="RangeMaxLayout" type="HBoxContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout"]
margin_left = 102.0
margin_top = 96.0
margin_right = 502.0
margin_bottom = 120.0

[node name="RangeH" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout/RangeMaxLayout"]
margin_right = 198.0
margin_bottom = 24.0
hint_tooltip = "Maximal horizontal relative position."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="RangeV" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/PostionLayout/RangeMaxLayout"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 24.0
hint_tooltip = "Maximal vertical relative position."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="AngleTitle" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout"]
margin_top = 148.0
margin_right = 502.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
text = "Angle"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AngleLayout" type="GridContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout"]
margin_top = 172.0
margin_right = 502.0
margin_bottom = 265.0
size_flags_vertical = 3
columns = 2

[node name="EnabledLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout"]
margin_top = 13.0
margin_right = 110.0
margin_bottom = 27.0
text = "Enabled"

[node name="Enabled" type="CheckButton" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout"]
margin_left = 114.0
margin_right = 502.0
margin_bottom = 40.0
hint_tooltip = "If enabled allow to rotate the card relative to the angle defined by the layout."
size_flags_horizontal = 3

[node name="ModeLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout"]
margin_top = 47.0
margin_right = 110.0
margin_bottom = 61.0
text = "Mode"

[node name="Mode" type="OptionButton" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout"]
margin_left = 114.0
margin_top = 44.0
margin_right = 502.0
margin_bottom = 64.0
hint_tooltip = "Linear: the angle will be interpolated linearly from min to max.
Symmetric: like linear but flip direction in the middle of the cards.
Random: randomly pick an angle in the min/max range. "
text = "Linear"
items = [ "Linear", null, false, 0, null, "Symmetric", null, false, 1, null, "Random", null, false, 2, null ]
selected = 0

[node name="RangeLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout"]
margin_top = 73.0
margin_right = 110.0
margin_bottom = 87.0
text = "Range (min, max)"

[node name="RangeLayout" type="HBoxContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout"]
margin_left = 114.0
margin_top = 68.0
margin_right = 502.0
margin_bottom = 92.0

[node name="RangeMin" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout/RangeLayout"]
margin_right = 192.0
margin_bottom = 24.0
hint_tooltip = "Minimal relative angle."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="RangeMax" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/AngleLayout/RangeLayout"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 24.0
hint_tooltip = "Maximal relative angle."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
allow_greater = true
allow_lesser = true

[node name="ScaleTitle" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout"]
margin_top = 269.0
margin_right = 502.0
margin_bottom = 289.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
text = "Scale"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleLayout" type="GridContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout"]
margin_top = 293.0
margin_right = 502.0
margin_bottom = 437.0
size_flags_vertical = 3
columns = 2

[node name="EnabledLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_top = 13.0
margin_right = 98.0
margin_bottom = 27.0
text = "Enabled"

[node name="Enabled" type="CheckButton" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_left = 102.0
margin_right = 502.0
margin_bottom = 40.0
hint_tooltip = "If enabled allow to scale the card relative to the scale defined by the layout."
size_flags_horizontal = 3

[node name="ModeLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_top = 47.0
margin_right = 98.0
margin_bottom = 61.0
text = "Mode"

[node name="Mode" type="OptionButton" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_left = 102.0
margin_top = 44.0
margin_right = 502.0
margin_bottom = 64.0
hint_tooltip = "Linear: the scale will be interpolated linearly from min to max.
Symmetric: like linear but flip direction in the middle of the cards.
Random: randomly pick a scale in the min/max range. "
text = "Linear"
items = [ "Linear", null, false, 0, null, "Symmetric", null, false, 1, null, "Random", null, false, 2, null ]
selected = 0

[node name="RatioLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_top = 71.0
margin_right = 98.0
margin_bottom = 85.0
text = "Aspect ratio"

[node name="Ratio" type="OptionButton" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_left = 102.0
margin_top = 68.0
margin_right = 502.0
margin_bottom = 88.0
hint_tooltip = "Keep: keep the aspect ratio of the cards. (ignore the y scaling)
Ignore: allows independent x and y scaling."
text = "Keep"
items = [ "Keep", null, false, 0, null, "Ignore", null, false, 1, null ]
selected = 0

[node name="RangeMinLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_top = 97.0
margin_right = 98.0
margin_bottom = 111.0
text = "Minimum (x, y)"

[node name="RangeMinLayout" type="HBoxContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_left = 102.0
margin_top = 92.0
margin_right = 502.0
margin_bottom = 116.0

[node name="RangeH" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout/RangeMinLayout"]
margin_right = 198.0
margin_bottom = 24.0
hint_tooltip = "Minimal horizontal relative scaling."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="RangeV" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout/RangeMinLayout"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 24.0
hint_tooltip = "Minimal vertical relative scaling."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="RangeMaxLbl" type="Label" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_top = 125.0
margin_right = 98.0
margin_bottom = 139.0
text = "Maximum (x, y)"

[node name="RangeMaxLayout" type="HBoxContainer" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout"]
margin_left = 102.0
margin_top = 120.0
margin_right = 502.0
margin_bottom = 144.0

[node name="RangeH" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout/RangeMaxLayout"]
margin_right = 198.0
margin_bottom = 24.0
hint_tooltip = "Maximal horizontal relative scaling."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="RangeV" type="SpinBox" parent="MainLayout/MainTabs/FineTuning/TuningLayout/ScaleLayout/RangeMaxLayout"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 24.0
hint_tooltip = "Maximal vertical relative scaling."
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="Events" type="Control" parent="MainLayout/MainTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Animations" type="Control" parent="MainLayout/MainTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ButtonLayout" type="HBoxContainer" parent="MainLayout"]
margin_top = 477.0
margin_right = 510.0
margin_bottom = 507.0
alignment = 1

[node name="SaveBtn" type="Button" parent="MainLayout/ButtonLayout"]
margin_left = 153.0
margin_right = 253.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Save"

[node name="CancelBtn" type="Button" parent="MainLayout/ButtonLayout"]
margin_left = 257.0
margin_right = 357.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Cancel"
[connection signal="toggled" from="MainLayout/MainTabs/Layout/LayoutLayout/ModeSwitchLayout/ModeSwitch" to="." method="_on_ModeSwitch_toggled"]
[connection signal="pressed" from="MainLayout/ButtonLayout/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="MainLayout/ButtonLayout/CancelBtn" to="." method="_on_CancelBtn_pressed"]
